--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,9 @@ dependencies {
     def layout = '2.1.3'
     def lifecycle = '2.4.1'
     def navigation = '2.3.5'
+    def rxJava = '2.2.13'
+    def rxKotlin = '2.4.0'
+    def rxAndroid = '2.1.1'
 
     implementation "androidx.core:core-ktx:$core_ktx"
     implementation "androidx.appcompat:appcompat:$app_compat"
@@ -59,6 +62,12 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle"
     implementation "androidx.navigation:navigation-fragment-ktx:$navigation"
     implementation "androidx.navigation:navigation-ui-ktx:$navigation"
+
+    //Rx
+    implementation "io.reactivex.rxjava2:rxjava:$rxJava"
+    implementation "io.reactivex.rxjava2:rxkotlin:$rxKotlin"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxAndroid"
+    implementation "androidx.room:room-rxjava2:$room"
 
     //Koin
     implementation "io.insert-koin:koin-core:$koin"
@@ -70,10 +79,6 @@ dependencies {
     implementation "androidx.room:room-runtime:$room"
     kapt "androidx.room:room-compiler:$room"
     implementation "androidx.room:room-ktx:$room"
-
-    //Fragment
-//    implementation 'androidx.fragment:fragment:1.3.0-alpha04'
-//    implementation 'androidx.fragment:fragment-ktx:1.3.0-alpha04'
 
     testImplementation 'junit:junit:4.+'
     testImplementation "io.mockk:mockk:1.9.1"
