--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
+    id 'androidx.navigation.safeargs'
 }
 
 android {
@@ -40,10 +41,23 @@ android {
     }
 }
 
+android {
+    flavorDimensions 'version'
+    productFlavors {
+        flavor1 {
+            manifestPlaceholders appTheme: '@style/AppTheme'
+            dimension 'version'
+        }
+        flavor2 {
+            manifestPlaceholders appTheme: '@style/AppTheme.Second'
+            dimension 'version'
+        }
+    }
+}
+
 dependencies {
 
     def room = '2.4.2'
-    def koin = '3.1.5'
     def core_ktx = '1.7.0'
     def app_compat = '1.4.1'
     def material = '1.5.0'
@@ -53,6 +67,10 @@ dependencies {
     def rxJava = '2.2.13'
     def rxKotlin = '2.4.0'
     def rxAndroid = '2.1.1'
+    def dagger = '2.41'
+    def lifecycle_version = "2.5.0-alpha02"
+    def lifecycleExtension = '2.2.0'
+    def fragment = '1.3.0'
 
     implementation "androidx.core:core-ktx:$core_ktx"
     implementation "androidx.appcompat:appcompat:$app_compat"
@@ -69,19 +87,23 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxandroid:$rxAndroid"
     implementation "androidx.room:room-rxjava2:$room"
 
-    //Koin
-    implementation "io.insert-koin:koin-core:$koin"
-    implementation "io.insert-koin:koin-android:$koin"
-    implementation "io.insert-koin:koin-android-compat:$koin"
-    implementation "io.insert-koin:koin-androidx-navigation:$koin"
-
     //Room
     implementation "androidx.room:room-runtime:$room"
     kapt "androidx.room:room-compiler:$room"
     implementation "androidx.room:room-ktx:$room"
 
+    //Dagger
+    implementation "com.google.dagger:dagger:$dagger"
+    kapt "com.google.dagger:dagger-compiler:$dagger"
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleExtension"
+    implementation "androidx.fragment:fragment-ktx:$fragment"
+
     testImplementation 'junit:junit:4.+'
-    testImplementation "io.mockk:mockk:1.9.1"
+    testImplementation "io.mockk:mockk:1.9.3"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1'
     testImplementation "androidx.arch.core:core-testing:2.1.0"
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
